sane formatting